# osapiens-challenge

./: README.md  classification_segmentation  pyproject.toml  requirements.txt
