[build-system]
requires = ["setuptools>=68", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"


[project]
name = "example"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]
description = "An example project."
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "pandas-stubs",
  "torch",
  "albumentations",
  "tqdm",
  "segmentation_models_pytorch"
]
dynamic = ["version"]
keywords = [
    "ai",
]
readme = "README.rst"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "isort",
    "ruff",
    "yapf"
]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
include_trailing_comma = true
line_length = 100
multi_line_output = 3
split_on_trailing_comma = true

[tool.ruff]
select = [
  "ALL",
]
ignore = [
  "ANN101",
  "ANN102",
  "PLR2004",
  "T201",
  # allow asserts
  "S101",
]
line-length = 100

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = []

[tool.ruff.flake8-quotes]
avoid-escape = false
inline-quotes = "single"

[tool.ruff.pydocstyle]
convention = "google"


[tool.setuptools_scm]


[tool.yapf]
based_on_style = "google"
column_limit = 100
allow_split_before_dict_value = false
dedent_closing_brackets = true
indent_dictionary_value = false
